# cat_win

./: .gitignore  ARGUMENTS.md  CHANGELOG.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  README_PyPI.md  exeVersionFile  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  documentation_request.yaml  feature_request.yaml
.github/workflows/: build_executable.yml  coverage.yml  main.yml  package_test.yml  social_preview.yml  unit_test.yml
cat_win/: __init__.py  __main__.py  cat.config  cat.py  repl.py  requirements.txt  shell.py
cat_win/_vendor/: _curses.cp314-win32.pyd  _curses.cp314-win_amd64.pyd  _curses.cp314-win_arm64.pyd  _curses_panel.cp314-win32.pyd  _curses_panel.cp314-win_amd64.pyd  _curses_panel.cp314-win_arm64.pyd
cat_win/const/: ArgConstants.py  ColorConstants.py  argconstants.py  colorconstants.py  defaultconstants.py
cat_win/persistence/: Config.py  cconfig.py  config.py
cat_win/res/: signatures.json
cat_win/src/: argparser.py  cat.py  cats.py
cat_win/src/const/: argconstants.py  colorconstants.py  defaultconstants.py  escapecodes.py  regex.py
cat_win/src/curses/: diffviewer.py  editor.py  hexeditor.py
cat_win/src/curses/helper/: diffviewerhelper.py  editorhelper.py  editorsearchhelper.py  fileselectionhelper.py  githelper.py  syntaxhighlight.py
cat_win/src/domain/: appcontext.py  arguments.py  contentbuffer.py  file.py  files.py
cat_win/src/persistence/: cconfig.py  config.py  viewstate.py  xdgconfig.py
cat_win/src/processor/: contentpostessor.py  contentprecessor.py  contentprocessor.py  executionprecessor.py  fileprocessor.py  lineprefixprocessor.py  outputprocessor.py  registerwrapper.py
cat_win/src/service/: cbase64.py  checksum.py  clipboard.py  converter.py  diffviewer.py  editor.py  fileattributes.py  formatter.py  hexeditor.py  more.py  querymanager.py  rawviewer.py  stringfinder.py  strings.py  summary.py  visualizer.py
cat_win/src/service/helper/: archiveviewer.py  diffviewerhelper.py  editorhelper.py  editorsearchhelper.py  environment.py  githelper.py  iohelper.py  levenshtein.py  progressbar.py  stdinhelper.py  syntaxhighlight.py  tmpfilehelper.py  utility.py  utilityold.py  vishelper.py  winstreams.py  zipviewer.py
cat_win/src/util/: argparser.py  holder.py
cat_win/src/web/: updatechecker.py  urls.py
cat_win/tests/: test_ArgConstants.py  test_ArgParser.py  test_Base64.py  test_Converter.py  test_File.py  test_FileAttributes.py  test_Holder.py  test_RawViewer.py  test_StdInHelper.py  test_StringFinder.py  test_UpdateChecker.py  test_ansi.py  test_argconstants.py  test_argparser.py  test_cat.py  test_cbase64.py  test_cconfig.py  test_checksum.py  test_config.py  test_converter.py  test_convertercomp.py  test_editor.py  test_file.py  test_fileattributes.py  test_full.py  test_holder.py  test_more.py  test_rawviewer.py  test_shell.py  test_stdinhelper.py  test_stringfinder.py  test_strings.py  test_summary.py  test_updatechecker.py  test_urls.py  test_utility.py  test_zipviewer.py
cat_win/tests/mocks/: argparser.py  args.py  ctx.py  diffviewer.py  edit.py  editorsearch.py  error.py  logger.py  pbar.py  std.py  tmpfile.py  ufiles.py
cat_win/tests/src/: test_ansi.py  test_argparser.py  test_cat.py  test_cats.py  test_full.py  test_shell.py
cat_win/tests/src/const/: test_argconstants.py  test_colorconstants.py  test_defaultconstants.py  test_escapecodes.py  test_regex.py
cat_win/tests/src/curses/: test_diffviewer.py  test_editor.py  test_hexeditor.py
cat_win/tests/src/domain/: test_appcontext.py  test_arguments.py  test_contentbuffer.py  test_file.py  test_files.py
cat_win/tests/src/persistence/: test_cconfig.py  test_config.py  test_viewstate.py  test_xgdconfig.py
cat_win/tests/src/processor/: test_contentpostessor.py  test_contentprecessor.py  test_contentprocessor.py  test_executionprecessor.py  test_fileprocessor.py  test_lineprefixprocessor.py  test_outputprocessor.py  test_registerwrapper.py
cat_win/tests/src/service/: test_cbase64.py  test_checksum.py  test_clipboard.py  test_converter.py  test_editor.py  test_fileattributes.py  test_formatter.py  test_hexeditor.py  test_more.py  test_querymanager.py  test_rawviewer.py  test_stringfinder.py  test_strings.py  test_summary.py  (+1 more)
cat_win/tests/texts/: ansi-base.txt  ansi-neg.txt  ansi-pos.txt  full_test_eval.txt  full_test_result_D.txt  test_holderEdgeCase_1.txt  test_peek.txt
cat_win/util/: ArgConstants.py  ArgParser.py  Base64.py  ColorConstants.py  Converter.py  File.py  FileAttributes.py  Holder.py  RawViewer.py  StdInHelper.py  StringFinder.py  TmpFileHelper.py  argparser.py  cbase64.py  checksum.py  converter.py  convertercomp.py  convertercompold.py  editor.py  editorhelper.py  file.py  fileattributes.py  holder.py  more.py  rawviewer.py  stdinhelper.py  stringfinder.py  strings.py  summary.py  tmpfilehelper.py  urls.py  utility.py  utilityold.py  winstreams.py  zipviewer.py
cat_win/util/helper/: editorhelper.py  stdinhelper.py  tmpfilehelper.py  utility.py  utilityold.py  winstreams.py
cat_win/util/service/: cbase64.py  clipboard.py  converter.py  editor.py  fileattributes.py  more.py  stringfinder.py  strings.py  summary.py
cat_win/web/: UpdateChecker.py  updatechecker.py  urls.py
tests/: dist.py  test.txt  test_ArgConstants.py  test_ArgParser.py  test_Base64.py  test_Converter.py  test_FileAttributes.py  test_Holder.py  test_StringFinder.py  test_UpdateChecker.py  test_cat.py  test_checksum.py  test_full.py  test_holderEdgeCase_2.txt
tests/texts/: full_test_result_B.txt  full_test_result_C.txt  full_test_result_D.txt
workflowHelper/: build.py  dist.py  exeVersion.py  exeversion.py  genfilesig.py  preview.py  requirements-dev.txt  requirements.txt
(+22 files in other folders)
