[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cat_win"
requires-python = ">=3.7"
authors = [{name = "Silas A. Kraume", email = "silas.kraume1552@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
	"cat",
    "cli",
    "console",
    "crossplatform",
    "python",
    "terminal",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
]
dynamic = [
    "version",
    "description",
]
dependencies = [
    "colorama~=0.4.6",
    "requests>=2.26.0",
]

[project.optional-dependencies]
clip = [
    "pyperclip~=1.8.0",
]

[tool.flit.sdist]
exclude = 	[
    "cat_win/build",
    "**/**.spec",
]

[project.scripts]
cat = "cat_win.__main__:deprecated_entry_point"
catw = "cat_win.__main__:entry_point"

[project.urls]
Github = "https://github.com/SilenZcience/cat_win"
Download = "https://github.com/SilenZcience/cat_win/tarball/master"
Tracker = "https://github.com/SilenZcience/cat_win/issues"