[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cat_win"
requires-python = ">=3.7"
authors = [{name = "Silas A. Kraume", email = "silas.kraume1552@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "cat",
    "cli",
    "console",
    "crossplatform",
    "python",
    "terminal",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Linguistic",
]
dynamic = [
    "version",
    "description",
]
dependencies = [
    "windows-curses==2.3.0; platform_system=='Windows' and platform_python_implementation!='PyPy' and python_version<='3.10'",
    "windows-curses~=2.3.0; platform_system=='Windows' and platform_python_implementation!='PyPy' and python_version>'3.10'",
]

[project.optional-dependencies]
clip = [
    "pyperclip~=1.8.0",
]
cfix = [
    "colorama~=0.4.6; platform_system=='Windows'",
]

[tool.flit.sdist]
exclude = [
    "cat_win/build",
    "**/**.spec",
    "**/**.config",
]

[project.scripts]
catw = "cat_win.__main__:entry_point"
cats = "cat_win.__main__:shell_entry_point"

[project.urls]
Github = "https://github.com/SilenZcience/cat_win"
Download = "https://github.com/SilenZcience/cat_win/tarball/master"
Tracker = "https://github.com/SilenZcience/cat_win/issues"